Implemented local storage configuration writer. Closes #15

--- a/src/main/resources/config/application-dev.yml
+++ b/src/main/resources/config/application-dev.yml
@@ -103,3 +103,8 @@ jhipster:
 # ===================================================================
 
 # application:
+
+provisioning:
+  tftp:
+    enable: true
+#    location: /tmp-tftp
